--- a/homework/html/hello.html
+++ b/homework/html/hello.html
@@ -3,6 +3,6 @@
     <div>
       HELLO!
      </div>
-    <a herf="https://www.youtube.com/">Youtube</a>
+    <a herf="https://www.youtube.com">Youtube</a>
   </body>
 </html>
