--- a/course/week1/29_zebra.html
+++ b/course/week1/29_zebra.html
@@ -10,7 +10,7 @@ table,th,td{
   padding:10px 5px;
   text-align: center;
 }
-td:nth-child(odd){
+tr:nth-child(odd){
   background-color:lightblue;
 }
 </style>
