--- a/course/week1/30_list.html
+++ b/course/week1/30_list.html
@@ -17,5 +17,12 @@
   <li>three</li>
 </ol>
 
+<dl>
+  <dt>Coffee</dt>
+  <dd>- black hot drink</dd><!--橫線可打可不打-->
+  <dt>Milk</dt>
+  <dd> white cold drink</dd>
+</dl>
+
 </body>
 </html>
