--- a/course/week1/31_class.html
+++ b/course/week1/31_class.html
@@ -13,19 +13,20 @@
     margin:50px;
 }
 	.text{
-    color:white;
     text-align:center;
 }
 </style>
 </head>
 
 <body>
-<div class="change1 text">
+<div class="change1 text">	<!--可一次多個class-->
 	<h2>London</h2>
 	<p>London is the capital of England.</p>
 </div>
 
 <div>
-	<h2>Tokyo</h2>
+	<h2 class="text">Tokyo</h2>	<!--h2亦可使用class-->
 	<p class="change2 text">Tokyo is the capital of Japan.</p>
 </div>
+</body>
+</html>
