--- a/course/week1/31_class.html
+++ b/course/week1/31_class.html
@@ -5,26 +5,27 @@
   .change1 {
     background-color:skyblue;
     border:1px solid black;
-    margin:20px;
+    color:white;
+    margin:5px;
 }
   .change2 {
     background-color:tomato;
     border:2px solid gray;
     margin:50px;
+    padding:20px;
 }
 	.text{
     text-align:center;
 }
 </style>
 </head>
-
 <body>
 <div class="change1 text">	<!--可一次多個class-->
 	<h2>London</h2>
 	<p>London is the capital of England.</p>
 </div>
 
-<div>
+<div style="border:1px dotted black;">
 	<h2 class="text">Tokyo</h2>	<!--h2亦可使用class-->
 	<p class="change2 text">Tokyo is the capital of Japan.</p>
 </div>
