--- a/course/week1/31_class.html
+++ b/course/week1/31_class.html
@@ -10,7 +10,7 @@
 }
   .change2 {
     background-color:tomato;
-    border:2px solid gray;
+    border:2px solid green;
     margin:50px;
     padding:20px;
 }
