--- a/course/week2/1_layout.html
+++ b/course/week2/1_layout.html
@@ -21,10 +21,18 @@ nav{
     font-size:20px;
 }
 
+section{
+	background-color:#8080C0;
+    padding:5px;
+    height:130px;
+    width:610px;
+    font-size:20px;
+}
+
 article{
 	background-color:#C7C7E2;
     padding:5px;
-    height:300px;
+    height:200px;
     width:610px;
     font-size:20px;
 }
@@ -55,27 +63,29 @@ details{
 
 <body>
 <header>
-	<h2>This is a Heading</h2>
+	<h1>This is a Heading</h1>
 </header>
 
 <nav>
-	<a href="#">London</a><br>
-	<a href="#">Paris</a><br>
+    <a href="#">London</a><br>
+    <a href="#">Paris</a><br>
     <a href="#">Tokyo</a><br> 
 </nav>
 
 <section>
-	<article>
-    	<h1>LONDON</h1>
-		<p>London is the capital and largest city of England and the United Kingdom.<br>It stands on the River Thames in south-east England.</p>
-        <p>London, as one of the world's global cities.</p>
-        <p>London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-	</article>
-
-	<aside>
-		<p>aside</p>
-	</aside>
+    <h2>LONDON</h2>
+    <p>describe of london</p>
 </section>
+
+<article>
+	<p>London is the capital and largest city of England and the United Kingdom.<br>It stands on the River Thames in south-east England.</p>
+    <p>London, as one of the world's global cities.</p>
+    <p>London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+</article>
+
+<aside>
+	<p>aside</p>
+</aside>
 
 <footer>
 	<p>footer</p>
