--- a/course/week2/3_entieties.html
+++ b/course/week2/3_entieties.html
@@ -10,13 +10,21 @@ p{
 </head>
 
 <body>
-<p>space charactor*3:|&nbsp;&nbsp;&nbsp;|</p><br>
-<p>greater than:  &gt;</p><br>
-<p>less than:  &lt;</p><br>
-<p>ampersand:  	&amp;</p><br>
-<p>double quotation mark:  	&quot;</p><br>
-<p>single quotation mark:   &apos;</p><br>
-<p>copyright:  &copy;</p><br>
+<p>space charactor*3:|&nbsp;&#160;&nbsp;|</p>
+<p>greater than:  &gt;</p>
+<p>less than:  &#60;</p>
+<p>ampersand:  	&amp;</p>
+<p>double quotation mark:  	&quot;</p>
+<p>single quotation mark:   &#39;</p>
+<p>copyright:  &copy;</p>
+<br>
+<p>euro: &#x20AC;</p>
+<p>for all:  &#8704;</p>
+<p>empty sets:  &empty;</p>
+<p>Alpha:  &#913;</p>
+<p>Beta:  &Beta;</p>
+<p></p>
+
 
 </body>
 </html>
