--- a/course/week2/19_date.html
+++ b/course/week2/19_date.html
@@ -11,6 +11,11 @@
 <form action="/action_page.php">
 	<input type="date" id="date" name="DATE">
     <input type="submit" value="SUBMIT">
+    <br><br>
+    <label for="min_date">The date after 1900-12-30</label>
+	<input type="date" id="min_date" name="MIN" min="1900-12-30"><br><br>
+    <label for="min_date">The date before 2000-12-31</label>
+    <input type="date" id="max_date" name="MAX" max="2000-12-31">
 </form>
 </body>
 </html>
