--- a/course/week2/7_form-submit.html
+++ b/course/week2/7_form-submit.html
@@ -11,7 +11,8 @@
 <form action="/action_page.php">
 	<label for="name">Name:</label><br>
     <input type="text" id="name" name="name"><br>
-    <input type="submit" value="SUBMIT">    
+    <input type="submit" value="SUBMIT"><br><br>
+    <input type="image" src="img_submit.gif" alt="submit" width="30" height="30">
 </form>
 </body>
 </html>
