--- a/homework/html/HW1/hw1.html
+++ b/homework/html/HW1/hw1.html
@@ -16,7 +16,7 @@
 
 <header><h1>黃品慈</h1></header>
 <nav>
-<img src="https://github.com/st950344/wp110b/blob/master/homework/photo/facebook.png" alt="error" width="50px" height="50px"/>
+<img src="facebook.png" alt="error" width="50px" height="50px"/>
 </nav>
 <p>現在就讀於國立金門大學資工系。</p>
 <h2>生日</h2>
