--- a/homework/html/HW1/hw1.html
+++ b/homework/html/HW1/hw1.html
@@ -16,17 +16,12 @@
 
 <header><h1>黃品慈</h1></header>
 <nav>
-<img src="facebook.png" alt="error" width="50px" height="50px"/>
+<a href="https://www.facebook.com/ivy.haung.14"><img src="facebook.png" alt="error" width="30px" height="30px"/></a>
+<a href="https://www.instagram.com/ivyhuang_0814/"><img src="instagram.png" alt="error" width="30px" height="30px"/></a>
+<a href="https://github.com/st950344"><img src="github.png" alt="error" width="30px" height="30px"/></a>
 </nav>
 <p>現在就讀於國立金門大學資工系。</p>
 <h2>生日</h2>
 <h2>學歷</h2>
 <h2>興趣</h2>
 <h2>休閒活動</h2>
-
-
-
-<p>This is a paragraph.</p>
-
-</body>
-</html>
