--- a/homework/html/HW1/hw1.html
+++ b/homework/html/HW1/hw1.html
@@ -2,13 +2,6 @@
 <html>
 <head>
 <title>HW1</title>
-
-<!-- <style>
-.birth{
-	color:blue;
-}
-</style>-->
-
 </head>
 
 
@@ -20,15 +13,61 @@
 <a href="https://www.instagram.com/ivyhuang_0814/"><img src="instagram.png" alt="error" width="30px" height="30px"/></a>
 <a href="https://github.com/st950344"><img src="github.png" alt="error" width="30px" height="30px"/></a>
 </nav>
+
+
 <p>現在就讀於國立金門大學資工系。</p>
-<h2>生日</h2>
-<h2>學歷</h2>
+
+<div class="interesting">
 <h2>興趣</h2>
-<h2>休閒活動</h2>
+<ul>
+	<li>閱讀與書寫小說</li>
+    <li><dl>
+    <dt>打遊戲</dt>
+  	<dd>- League of Legends</dd>
+    <dd>- Apex</dd>
+    </dl></li>
+    <li>釣魚</li>
+</ul>
+</div>
 
+<div class="education">
+<table>
+  <capation><h2>學歷</h2></capation>
+  <tr>
+    <th>階段</th>
+    <th>學校</th>
+  </tr>
+    <tr>
+    <td>國小</td>
+    <td>臺北市內湖區南湖國民小學</td>
+  </tr>
+    <tr>
+    <td>國中</td>
+    <td>臺北市立明湖國民中學</td>
+  </tr>
+    <tr>
+    <td>高中</td>
+    <td>臺北市立大直高級中學</td>
+  </tr>
+    <tr>
+    <td>大學</td>
+    <td>國立金門大學</td>
+  </tr>
+</table>
+</div>
 
+<div class="learn">
+<h2>學習語言</h2>
+<p>c</p>
+<p>c#</p>
+<p>HTML+css</p>
+<p>JavaScript</p>
+</div>
 
-<p>hy.</p>
+<div class="work">
+<h2>作品集</h2>
+<p></p>
+</div>
 
 </body>
 </html>
