--- a/homework/html/HW2/hw2.html
+++ b/homework/html/HW2/hw2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HW1</title>
+<title>HW2</title>
 
 <style>
 * {
@@ -41,13 +41,12 @@ tr,td {
     justify-content: center;    /* 垂直置中 */  
 }
 .all{
-	height:100%;
-    weight:100%;
+    width:100%;
 }
 .bottom{
-	weight:50%;
-	border-bottom:gray 1px solid;
-
+	width:70%;
+	border-bottom:#DCDCDC 1px solid;
+	margin-left:15%
 }
 
 </style>
@@ -105,6 +104,7 @@ tr,td {
     <td>國立金門大學</td>
   </tr>
 </table>
+<br>
 </div>
 
 <div class="bottom">
@@ -119,7 +119,7 @@ tr,td {
 <h2>作品集</h2>
 <p></p>
 </div>
-	
+
 </div>
 
 </body>
