--- a/homework/html/HW2/hw2.html
+++ b/homework/html/HW2/hw2.html
@@ -5,10 +5,10 @@
 
 <style>
 * {
-	text-align: center;
-    font-family: DFKai-sb;
-    background-color:#F5FFFA;
-    color:#191970;
+    	text-align: center;
+   	 font-family: DFKai-sb;
+    	background-color:#F5FFFA;
+    	color:#191970;
 }
 
 h1{
@@ -17,31 +17,31 @@ h1{
 
 h2{
 	font-style: italic;
-    color: #708090;
+	color: #708090;
 }
 
 table{
 	margin-left:auto; 
 	margin-right:auto;
-    <--!將表格置中-->
+    	/*將表格置中*/
 }
 tr,td {
 	border-bottom:gray 1px solid;
-    border-callapse:collapse;
-    magin:0px;
-    padding:5px;
-    spacing:0px;
-}
+    	border-callapse:collapse;
+    	magin:0px;
+    	padding:5px;
+    	spacing:0px;
+}	
 .line{
 	border-right:gray 1px solid;
 }
 
 .ul{
 	display: flex;  /* 水平置中 */
-    justify-content: center;    /* 垂直置中 */  
+    	justify-content: center;    /* 垂直置中 */  
 }
 .all{
-    width:100%;
+    	width:100%;
 }
 .bottom{
 	width:70%;
