--- a/homework/html/HW2/hw2.html
+++ b/homework/html/HW2/hw2.html
@@ -58,22 +58,18 @@ input[type=button]{
 <br>
 <p class="ib"><input type="text" name="email" value="" placeholder="E-mail"/></p>
 <p class="ib"><input type="text" name="phone" value="" placeholder="Phone Number"/></p>
-<p class="notib">Address<textarea id="w3review" name="w3review" rows="4" cols="50"></textarea></p>
+<p class="notib">Address<br><textarea id="w3review" name="w3review" rows="4" cols="50"></textarea></p>
 
-<select class="notib">
+<p class="notib"><select>
     <option>選擇產品</option>
     <option>產品一</option>
     <option>產品二</option>
 	<option>產品三</option>
-</select>
+</select></p>
 <br><br>
 <p class="ib"><input type="button" value="submit" name="Submit"></p>
 
 </form>
 
-
-
-
-<button>
 </body>
 </html>
