--- a/homework/html/HW4/hw4.html
+++ b/homework/html/HW4/hw4.html
@@ -30,6 +30,14 @@ select{
 	padding:10px;
     display:inline-block;
 }
+
+input[type=text]{
+	width:80%;
+}
+input[type=button]{
+	width:100%;
+    font-size:20px;
+}
 </style>
 
 </head>
@@ -41,7 +49,7 @@ select{
 <p class="ib"><input type="text" name="firstname" value="" placeholder="First Name"/></p>
 <p class="ib"><input type="text" name="lastname" value="" placeholder="Last Name"/></p>
 <br>
-<p class="ib"><input type="date"></p>
+<p class="ib">Birth：<input type="date"></p>
 <div class="ib">
 <input  type="radio" name="sex" value="male">Female
 <input  type="radio" name="sex" value="female">Male
@@ -49,15 +57,19 @@ select{
 </div>
 <br>
 <p class="ib"><input type="text" name="email" value="" placeholder="E-mail"/></p>
-<p class="ib"><input type="password" name="" value="" placeholder="Password"/></p>
-<p class="notib"><textarea id="w3review" name="w3review" rows="4" cols="50">Address</textarea></p>
+<p class="ib"><input type="text" name="phone" value="" placeholder="Phone Number"/></p>
+<p class="notib">Address<br><textarea id="w3review" name="w3review" rows="4" cols="50"></textarea></p>
 
-<select class="notib">
+<p class="notib"><select>
     <option>選擇產品</option>
     <option>產品一</option>
     <option>產品二</option>
 	<option>產品三</option>
-</select>
+</select></p>
+<br><br>
+<p class="ib"><input type="button" value="submit" name="Submit"></p>
+
 </form>
+
 </body>
 </html>
