--- a/midterm/midterm.html
+++ b/midterm/midterm.html
@@ -173,7 +173,7 @@
                 window.location.href = "https://st950344.github.io/wp110b/midterm/midterm.html";
             }
             else {
-                window.location.href = "https://st950344.github.io/wp110b/midterm/think.html";
+                window.location.href = "https://st950344.github.io/wp110b/midterm/thank.html";
             }
         } 
 
