--- a/midterm/thank.html
+++ b/midterm/thank.html
@@ -3,7 +3,7 @@
 <head>
 <title>Page Title</title>
 <style>
-		p{
+	p{
             font-family:serif;
             text-align:center;
             height:80%;
@@ -11,8 +11,9 @@
             padding:5%;
             margin:5%;
             font-size:50px;
-	background: -webkit-linear-gradient(90deg, rgb(165, 202, 197), rgb(196, 224, 248));
-	background: linear-gradient(90deg, rgb(165, 202, 197), rgb(196, 224, 248));
+	background: -webkit-linear-gradient(-24deg, rgb(9, 12, 82), rgb(210, 193, 221));
+	background: linear-gradient(-24deg, rgb(9, 12, 82), rgb(210, 193, 221));
+
 
   background-clip: text;
   -webkit-background-clip: text;
@@ -27,6 +28,7 @@
   			top: 50%;
   			left: 50%;
   			margin: -150px 0 0 -300px; 
+            font-size:10px;
         }
         
         
@@ -52,7 +54,7 @@
 
 </div>
 <div class="t">
-		<p>THANK FOR PLAYING!</p>
+		<p style="font-size:45px;">THANK FOR PLAYING!</p>
 </div>
 </body>
 </html>
